force-app/main/default/objects/SiebelPlantAttribute__x/SiebelPlantAttribute__x.object-meta.xml
<CustomObject>
    <description>SiebelPlantAttribute</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelPlantAttribute</externalName>
    <label>Attributo impianto Siebel</label>
    <pluralLabel>Attributi impianto Siebel</pluralLabel>
</CustomObject>