force-app/main/default/objects/SiebelPlantAttribute__x/fields/ATTRIB_01__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_01__c</fullName>
    <label>Comune Amministrativo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>