force-app/main/default/objects/SiebelPlantAttribute__x/fields/ATTRIB_05__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_05__c</fullName>
    <label>Foglio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>