force-app/main/default/objects/SiebelPlantAttribute__x/fields/ATTRIB_06__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_06__c</fullName>
    <label>Qualifica Titolare</label>
    <length>30</length>
    <type>Text</type>
</CustomField>